共同- 更新swagger、全部加上型別
