# src/controller/common/user.ts
@@ -2,7 +2,12 @@ import validator from "validator";
 import User from '../../models/common/usersModels';
 import ErrorService from './../../service/error';
 import UploadController from "./../../controller/common/upload";
-import { NextFunction } from "express";
+import { InfoUpdateReq } from "src/interface/swagger-model/infoUpdateReq";
+import { InfoUpdateRes } from "src/interface/swagger-model/infoUpdateRes";
+import { Request, NextFunction, Response } from 'express';
+import { CommonUploadSuccess } from "src/interface/swagger-model/commonUploadSuccess";
+import { CommonUploadReqBody } from "src/interface/swagger-model/commonUploadReqBody";
+import { UserProfileRes } from "src/interface/swagger-model/userProfileRes";
 
 class UserController {
     constructor() {
@@ -10,10 +15,10 @@ class UserController {
     }
 
     // ———————————————————————  取得使用者資料  ———————————————————————
-    getUserProfile = async (req, res, next: NextFunction) => {
+    getUserProfile = async (req: Request<{}, UserProfileRes, {}, string, {}>, res, next: NextFunction) => {
         console.log("getUserProfile");
         try {
-            const { staffId } = req.user;
+            const { staffId } = req["user"];
             let role = (req.originalUrl.split('/')[2] === "manager") ? "manager" : "staff";
             const user = await User.findOne({ staffId, role }).select('+password');
             res.status(200).json({
@@ -43,10 +48,10 @@ class UserController {
 
 
     // ———————————————————————  更新使用者姓名  ———————————————————————
-    changeUserName = async (req, res, next: NextFunction) => {
+    changeUserName = async (req: Request<{}, InfoUpdateRes, InfoUpdateReq, null, {}>, res: Response, next: NextFunction) => {
         console.log("抓到路由- profile");
-        const { newName } = req.body;
-        const { staffId } = req.user;
+        let newName = req.body["newName"];
+        let staffId = req["user"].staffId;
         console.log('newName', newName, 'staffId', staffId);
 
         // 驗證欄位
@@ -94,17 +99,17 @@ class UserController {
 
 
     // ———————————————————————  更新大頭貼  ———————————————————————
-    updateSticker = async function changeSticker(req, res, next) {
+    updateSticker = async function changeSticker(req: Request<{}, CommonUploadSuccess, CommonUploadReqBody, string, {}>, res: Response, next: NextFunction) {
         console.log('自訂義程式(更新大頭貼) 之我接到囉～');
-        console.log('req.fileData', req.fileData);
-        console.log('req.user', req.user);
+        console.log('req.fileData', req["fileData"]);
+        console.log('req.user', req["user"]);
 
         try {
             let updateData = {
-                stickerUrl: req.fileData.fileUrl,
-                stickerFileName: req.fileData.fileName
+                fileName: req["fileData"].fileName,
+                fileUrl: req["fileData"].fileUrl,
             };
-            let condition = { staffId: req.user.staffId };
+            let condition = { staffId: req["user"].staffId };
 
             const updatedUser = await User.findOneAndUpdate(
                 condition,          // 條件
@@ -117,14 +122,11 @@ class UserController {
             res.send({
                 code: 1,
                 message: '上傳成功！',
-                data: {
-                    stickerFileName: updateData.stickerFileName,
-                    stickerUrl: updateData.stickerUrl,
-                }
+                data: updateData
             });
 
             // 刪除舊大頭貼
-            UploadController.deleteFile(req, res, next, req.user.stickerFileName);
+            UploadController.deleteFile(req, res, next, req["user."].stickerFileName);
 
         } catch (err) {
             res.status(500).json({ error: err.message });
