# src/interface/swagger-model/models.ts
@@ -1,7 +1,14 @@
+export * from './commonOptionSuccess';
+export * from './commonOptionSuccessData';
+export * from './commonOptionSuccessDataItem';
+export * from './commonResFailed';
 export * from './commonResFailedAuthInvalid';
 export * from './commonResFailedFieldInvalid';
 export * from './commonResFailedNoFound';
 export * from './commonResFailedWrongPassword';
+export * from './commonUploadReqBody';
+export * from './commonUploadSuccess';
+export * from './commonUploadSuccessData';
 export * from './infoUpdateReq';
 export * from './infoUpdateRes';
 export * from './infoUpdateResData';
@@ -18,9 +25,5 @@ export * from './movieDetailRes';
 export * from './movieDetailResReleaseDate';
 export * from './movieDetailUpdateFaild';
 export * from './movieDetailUpdateSuccess';
-export * from './profileStaffIdBody';
-export * from './userPostStickerReFailed';
-export * from './userPostStickerRes';
-export * from './userPostStickerResData';
 export * from './userProfileRes';
 export * from './userProfileResData';
