# swagger.json
@@ -86,7 +86,7 @@
                     "content": {
                         "multipart/form-data": {
                             "schema": {
-                                "$ref": "#/components/schemas/profile_staffId_body"
+                                "$ref": "#/components/schemas/CommonUploadReqBody"
                             }
                         }
                     },
@@ -94,7 +94,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Success",
+                        "description": "上傳成功",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -264,7 +264,7 @@
                     "content": {
                         "multipart/form-data": {
                             "schema": {
-                                "$ref": "#/components/schemas/profile_staffId_body"
+                                "$ref": "#/components/schemas/CommonUploadReqBody"
                             }
                         }
                     },
@@ -272,11 +272,11 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Success",
+                        "description": "上傳成功",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/UserPostStickerRes"
+                                    "$ref": "#/components/schemas/CommonUploadSuccess"
                                 }
                             }
                         }
@@ -286,7 +286,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/UserPostStickerReFailed"
+                                    "$ref": "#/components/schemas/CommonResFailed"
                                 }
                             }
                         }
@@ -442,7 +442,7 @@
                     "content": {
                         "multipart/form-data": {
                             "schema": {
-                                "$ref": "#/components/schemas/profile_staffId_body"
+                                "$ref": "#/components/schemas/CommonUploadReqBody"
                             }
                         }
                     },
@@ -450,21 +450,21 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Success",
+                        "description": "上傳成功！",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/UserPostStickerRes"
+                                    "$ref": "#/components/schemas/CommonUploadSuccess"
                                 }
                             }
                         }
                     },
-                    "500": {
+                    "401": {
                         "description": "上傳失敗",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/UserPostStickerReFailed"
+                                    "$ref": "#/components/schemas/CommonResFailed"
                                 }
                             }
                         }
@@ -606,7 +606,7 @@
                     },
                     "message": {
                         "type": "string",
-                        "example": "報錯啦!"
+                        "example": "系統發生錯誤!"
                     }
                 }
             },
@@ -647,25 +647,8 @@
                     }
                 }
             },
-            "LoginReq": {
-                "required": [
-                    "password",
-                    "staffId"
-                ],
-                "properties": {
-                    "staffId": {
-                        "type": "string",
-                        "description": "員工編號",
-                        "example": "A0002"
-                    },
-                    "password": {
-                        "type": "string",
-                        "description": "密碼",
-                        "example": "asd123"
-                    }
-                }
-            },
-            "LoginRes": {
+            "CommonUploadSuccess": {
+                "type": "object",
                 "properties": {
                     "code": {
                         "type": "number",
@@ -673,10 +656,30 @@
                     },
                     "message": {
                         "type": "string",
-                        "example": "message"
+                        "example": "成功取得上傳檔案資料!"
                     },
                     "data": {
-                        "$ref": "#/components/schemas/LoginRes_data"
+                        "$ref": "#/components/schemas/CommonUploadSuccessData"
+                    }
+                }
+            },
+            "CommonUploadSuccessData": {
+                "type": "object",
+                "properties": {
+                    "fileName": {
+                        "type": "string",
+                        "description": "檔案名稱(firebase比對用)",
+                        "example": "ab47d73-30db-4e3a-b3a6-c32621ed0cdf-大頭貼照片.jpeg"
+                    },
+                    "fileUrl": {
+                        "type": "string",
+                        "description": "檔案網址",
+                        "example": "https://firebasestorage.googleapis.com/v0/b/test0421-f01d7.appspot.com/o/0ab47d73-30db-4e3a-b3a6-c32621ed0cdf-%E8%A8%98%E6%86%B6%E9%AB%94%E7%A8%AE%E9%A1%9E.jpeg?alt=media&token=3ab1c84d-f82a-4cb9-af3c-7a8c71d8877e"
+                    },
+                    "fileSize": {
+                        "type": "number",
+                        "description": "檔案大小",
+                        "example": 76458
                     }
                 }
             },
@@ -725,6 +728,39 @@
                     "message": {
                         "type": "string",
                         "example": "請重新登入!"
+                    }
+                }
+            },
+            "LoginReq": {
+                "required": [
+                    "password",
+                    "staffId"
+                ],
+                "properties": {
+                    "staffId": {
+                        "type": "string",
+                        "description": "員工編號",
+                        "example": "A0002"
+                    },
+                    "password": {
+                        "type": "string",
+                        "description": "密碼",
+                        "example": "asd123"
+                    }
+                }
+            },
+            "LoginRes": {
+                "properties": {
+                    "code": {
+                        "type": "number",
+                        "example": 1
+                    },
+                    "message": {
+                        "type": "string",
+                        "example": "message"
+                    },
+                    "data": {
+                        "$ref": "#/components/schemas/LoginRes_data"
                     }
                 }
             },
@@ -845,51 +881,10 @@
                     }
                 }
             },
-            "UserPostStickerRes": {
-                "properties": {
-                    "code": {
-                        "type": "number",
-                        "example": 1
-                    },
-                    "message": {
-                        "type": "string",
-                        "example": "成功取得使用者資料!"
-                    },
-                    "data": {
-                        "$ref": "#/components/schemas/UserPostStickerResData"
-                    }
-                }
-            },
-            "UserPostStickerResData": {
-                "properties": {
-                    "stickerFileName": {
-                        "type": "string",
-                        "description": "大頭貼檔案名稱(firebase比對用)",
-                        "example": "19cf8d9d-dce0-4f37-b097-1acfdacb9279-胖虎.jpg"
-                    },
-                    "stickerUrl": {
-                        "type": "string",
-                        "description": "大頭貼圖片網址",
-                        "example": "https://storage.googleapis.com/test0421-f01d7.appspot.com/19cf8d9d-dce0-4f37-b097-1acfdacb9279-%E8%83%96%E8%99%8E.jpg?GoogleAccessId=firebase-adminsdk-udl5c%40test0421-f01d7.iam.gserviceaccount.com&Expires=1924876800&Signature=Ymql5WiOBMc%2FZDHpU5wzKEk%2Fa8I5vMCZCWJJwfgego7SfjaRoVu48tvjVy3QxoqX8vhmpvIKeaYZpAHtSwJCQO3gZD1i0w%2B%2BoAINLzmJkUsaA2AVckV%2B5eUIex%2FB7Rd%2BELeHErYBUcDlNrLU5MDPG4OpPyx5qp7tmpT6aD99zppvyvtT%2FSQOzYhBu7xgFyQ1a1SdKO8J%2F7vnbf6PRb83Ysrq3pQqiRL%2BXZD8DeA2GV7yrTovHzbi%2BtftMcF%2BKBDBs1yHkL2e8yUK594VXltObHAUoXTA1R6LNmkXCtp1m6D48ibymYhdJKJVhxBcSTsYuFF00JAc%2BR%2FDdgR9xit4fw%3D%3D"
-                    }
-                }
-            },
-            "UserPostStickerReFailed": {
-                "properties": {
-                    "code": {
-                        "type": "number",
-                        "example": -1
-                    },
-                    "message": {
-                        "type": "string",
-                        "example": "上傳失敗(系統報錯)"
-                    }
-                }
-            },
-            "profile_staffId_body": {
+            "CommonUploadReqBody": {
                 "type": "object",
                 "properties": {
-                    "image": {
+                    "file": {
                         "type": "string",
                         "format": "binary"
                     }
